--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=kupipodariday
+POSTGRES_USER=example_user
+POSTGRES_PASSWORD=example_password
+POSTGRES_DB=example_db
 POSTGRES_HOST=database
 POSTGRES_PORT=5432
+POSTGRES_PGDATA=/var/lib/postgresql/data/pgdata
 
-JWT_SECRET=change_me
+JWT_SECRET=example_jwt_secret
 
 REACT_APP_API_URL=/api
