--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     restart: unless-stopped
     env_file:
       - ./.env
+    environment:
+      PGDATA: ${POSTGRES_PGDATA}
     volumes:
       - postgres_data:${POSTGRES_PGDATA}
     healthcheck:
